--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-.navbar {
+/* .navbar {
 overflow: hidden;
 background-color: #F2F7FF;
 position: fixed;
@@ -6,6 +6,7 @@ top: 0;
 width: 100%;
 z-index: 1;
 }
+
 
 
 .navbar a {
@@ -144,4 +145,28 @@ p{
 }
 
 
+ */
 
+ html,
+body {
+  height: 100%;
+  margin: 0;
+}
+section {
+  height: 100vh;
+}
+section:nth-child(1) {
+  background: lightblue;
+}
+section:nth-child(2) {
+  background: lightgreen;
+}
+section:nth-child(3) {
+  background: purple;
+}
+section:nth-child(4) {
+  background: red;
+}
+section:nth-child(5) {
+  background: yellow;
+}
