--- a/style.css
+++ b/style.css
@@ -1,16 +1,8 @@
 .navbar {
 overflow: hidden;
 position: fixed;
-top: 0;
 width: 100%;
 z-index: 1;
-}
-
-html {
-	font-family: sans-serif;
-	scroll-snap-type: mandatory;
-	scroll-snap-points-y: repeat(100vh);
-	scroll-snap-type: y mandatory;
 }
 
 .navbar a {
@@ -24,13 +16,12 @@ text-decoration: none;
 
 .navbar a:hover {
 color: black;
-font-size: 17px;
+font-size: 22px;
 }     
 
 body{
     font-family: Inter;
     color: #2E3A59;
-    background: #F2F7FF;
     scroll-behavior: smooth;
 }
 
@@ -39,193 +30,189 @@ h1{
   font-style: normal;
   font-weight: 500;
   text-align: left;
-  color: #2E3A59;
   margin-bottom: 0px;
 }
 
 h2{
-    font-size: 60px;
-    font-style: normal;
-    font-weight: 300;
-    line-height: 72px;
-    text-align: left;
+  font-size: 60px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: 72px;
+  text-align: left;
 }
 
 h3{
-    font-size: 48px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 56px;
-    text-align: left;
+  font-size: 48px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 56px;
+  text-align: left;
 }
 
 h4{
-    font-size: 34px;
-    font-style: normal;
-    font-weight: 300;
-    line-height: 38px;
-    text-align: left;
+  font-size: 34px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: 38px;
+  text-align: left;
 }
 
 h5{
-    font-size: 24px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 24px;
-    text-align: left;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px;
+  text-align: left;
 
 }
 
 h6{
-    font-size: 20px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: 24px;
-    text-align: left;
+font-size: 20px;
+font-style: normal;
+font-weight: 500;
+text-align: left;
 }
 
 .subtitle1{
-    font-family: Inter;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 24px;
-    text-align: left;
+font-family: Inter;
+font-size: 16px;
+font-style: normal;
+font-weight: 400;
+line-height: 24px;
+text-align: left;
 }
 
 .subtitle2{
-    font-size: 14px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: 24px;
-    text-align: left;
+font-size: 14px;
+font-style: normal;
+font-weight: 500;
+line-height: 24px;
+text-align: left;
 }
 
 p{
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 400;
-    text-align: left;
+font-size: 16px;
+font-style: normal;
+font-weight: 400;
+text-align: left;
 }
 
 .p2{
-    font-family: Inter;
-    font-size: 14px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 20px;
-    letter-spacing: 0.25px;
-    text-align: left;
+  font-family: Inter;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 20px;
+  letter-spacing: 0.25px;
+  text-align: left;
 }
 
 .button-text{
-    font-size: 14px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: 16px;
-    letter-spacing: 1.25px;
-    text-align: left;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 16px;
+  letter-spacing: 1.25px;
+  text-align: left;
 }
 
 .caption{
-    font-size: 12px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 16px;
-    text-align: left;  
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 16px;
+  text-align: left;  
 }
 
 .overline{
-    font-size: 10px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: 16px;
-    letter-spacing: 1.5px;
-    text-align: left;
+  font-size: 10px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 16px;
+  letter-spacing: 1.5px;
+  text-align: left;
 }
 
 #carousel {
-    /* Ensure that the contents flow horizontally */
-    overflow-x: auto;
-    white-space: nowrap;
-    display: flex;
-    flex-direction: column;
-  }
+  /* Ensure that the contents flow horizontally */
+  overflow-x: auto;
+  white-space: nowrap;
+  display: flex;
+  flex-direction: column;
+}
   
-  /* 2018 spec - For Safari 11, Chrome 69+ */
-  #carousel.snap {
-    scroll-snap-type: y mandatory;
-    -webkit-overflow-scrolling: touch; /* Needed to work on iOS Safari */
-  }
+/* 2018 spec - For Safari 11, Chrome 69+ */
+#carousel.snap {
+  scroll-snap-type: y mandatory;
+  -webkit-overflow-scrolling: touch; /* Needed to work on iOS Safari */
+}
+
+#carousel.snap > div {
+  scroll-snap-align: center;
+}
+
+#carousel.snap.vertical {
+  flex-direction: column;
+  scroll-snap-type: y mandatory;
+}
   
-  #carousel.snap > div {
-    scroll-snap-align: center;
-  }
+/* 2015 spec - For Firefox, Edge, IE */
+#carousel.snap {
+  scroll-snap-type: mandatory;
+  -ms-scroll-snap-type: mandatory;
+  scroll-snap-points-x: repeat(100%);
+  -ms-scroll-snap-points-x: repeat(100%);
+}
+
+#carousel.snap.vertical {
+  scroll-snap-points-x: initial;
+  -ms-scroll-snap-points-x: initial;
+  scroll-snap-points-y: repeat(100%);
+  -ms-scroll-snap-points-y: repeat(100%);
+}
   
-  #carousel.snap.vertical {
-    flex-direction: column;
-    scroll-snap-type: y mandatory;
-  }
-  
-  /* 2015 spec - For Firefox, Edge, IE */
-  #carousel.snap {
-    scroll-snap-type: mandatory;
-    -ms-scroll-snap-type: mandatory;
-    scroll-snap-points-x: repeat(100%);
-    -ms-scroll-snap-points-x: repeat(100%);
-  }
-  
-  #carousel.snap.vertical {
-    scroll-snap-points-x: initial;
-    -ms-scroll-snap-points-x: initial;
-    scroll-snap-points-y: repeat(100%);
-    -ms-scroll-snap-points-y: repeat(100%);
-  }
-  
-  /* Below here is styling, not important for the actual example, just to make it look nice. No need to look down here! */
-  
-  html, body {
-    height: 100%;
-    margin: 0;
-    padding: 0;
-  }
-  
-  #carousel {
-    position: relative;
-    width: 100%;
-    height: 100%;
-  }
-  
-  #carousel > div {
-    min-width: 100%;
-    min-height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    color: #fff;
-    font-size: 20px;
-  }
-  
-  #carousel-1 {
-    background-color: #e34747;
-  }
-  
-  #carousel-2 {
-    background-color: #5ab92c;
-  }
-  
-  #carousel-3 {
-    background-color: #226de2;
-  }
+/* Below here is styling, not important for the actual example, just to make it look nice. No need to look down here! */
 
 
+@media only screen and (max-width: 1000px) {
+  h1{
+    font-size: 72px;
+  }
+  body{
+    font-size: 18px;
+  }
+  icon{
+    width: 100px;
+    height: 100px;
+  }
+}
 
- html,
-body {
+html, body {
   height: 100%;
   margin: 0;
+  padding: 0;
+  background-color: #F2F7FF;
 }
-section {
-  height: 100vh;
+
+#carousel {
+  position: relative;
+  width: 100%;
+  height: 100%;
 }
+  
+#carousel > div {
+  min-width: 100%;
+  min-height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  color: #2E3A59;
+  font-size: 20px;
+}
+
+#carousel-1{
+  background-image: url('https://www.litmus.com/wp-content/uploads/2020/04/best-way-to-code-background-colors-for-html-email.png');
+}
+
+
