--- a/style.css
+++ b/style.css
@@ -20,13 +20,13 @@ font-size: 22px;
 }     
 
 body{
-    font-family: Inter;
-    color: #2E3A59;
-    scroll-behavior: smooth;
+  font-family: Inter;
+  color: #2E3A59;
+  font-size: 1em;
 }
 
 h1{
-  font-size: 72px;
+  font-size: 4em;
   font-style: normal;
   font-weight: 500;
   text-align: left;
@@ -34,7 +34,7 @@ h1{
 }
 
 h2{
-  font-size: 60px;
+  font-size: 3.5em;
   font-style: normal;
   font-weight: 300;
   line-height: 72px;
@@ -42,7 +42,7 @@ h2{
 }
 
 h3{
-  font-size: 48px;
+  font-size: 3em;
   font-style: normal;
   font-weight: 400;
   line-height: 56px;
@@ -50,7 +50,7 @@ h3{
 }
 
 h4{
-  font-size: 34px;
+  font-size: 2.5em;
   font-style: normal;
   font-weight: 300;
   line-height: 38px;
@@ -58,7 +58,7 @@ h4{
 }
 
 h5{
-  font-size: 24px;
+  font-size: 2em;
   font-style: normal;
   font-weight: 400;
   line-height: 24px;
@@ -67,7 +67,7 @@ h5{
 }
 
 h6{
-font-size: 20px;
+font-size: 1.5em;
 font-style: normal;
 font-weight: 500;
 text-align: left;
@@ -75,7 +75,7 @@ text-align: left;
 
 .subtitle1{
 font-family: Inter;
-font-size: 16px;
+font-size: 1em;
 font-style: normal;
 font-weight: 400;
 line-height: 24px;
@@ -83,7 +83,7 @@ text-align: left;
 }
 
 .subtitle2{
-font-size: 14px;
+font-size: 0.8em;
 font-style: normal;
 font-weight: 500;
 line-height: 24px;
@@ -91,7 +91,6 @@ text-align: left;
 }
 
 p{
-font-size: 16px;
 font-style: normal;
 font-weight: 400;
 text-align: left;
@@ -99,7 +98,7 @@ text-align: left;
 
 .p2{
   font-family: Inter;
-  font-size: 14px;
+  font-size: 0.8em;
   font-style: normal;
   font-weight: 400;
   line-height: 20px;
@@ -173,19 +172,16 @@ text-align: left;
   
 /* Below here is styling, not important for the actual example, just to make it look nice. No need to look down here! */
 
-
-@media only screen and (max-width: 1000px) {
+@media only screen and (min-width: 300px) and (max-width: 1000px){
   h1{
-    font-size: 72px;
+    font-size: 3.5em;
   }
   body{
-    font-size: 18px;
-  }
-  icon{
-    width: 100px;
-    height: 100px;
+    font-size: 2em;
   }
 }
+
+
 
 html, body {
   height: 100%;
@@ -208,11 +204,7 @@ html, body {
   align-items: center;
   text-align: center;
   color: #2E3A59;
-  font-size: 20px;
 }
 
-#carousel-1{
-  background-image: url('https://www.litmus.com/wp-content/uploads/2020/04/best-way-to-code-background-colors-for-html-email.png');
-}
 
 
