--- a/style.css
+++ b/style.css
@@ -174,10 +174,10 @@ text-align: left;
 
 @media only screen and (max-width: 1000px){
   h1{
-    font-size: 2em;
+    font-size: 64px;
   }
   p{
-    font-size: 1em;
+    font-size: 16px;
   }
 }
 
