Test 3 font sizes

--- a/style.css
+++ b/style.css
@@ -172,12 +172,12 @@ text-align: left;
   
 /* Below here is styling, not important for the actual example, just to make it look nice. No need to look down here! */
 
-@media only screen and (min-width: 300px) and (max-width: 800px){
+@media only screen and (max-width: 800px){
   h1{
-    font-size: 1em;
+    font-size: 3em;
   }
   body{
-    font-size: 1.5em;
+    font-size: 2em;
   }
 }
 
