--- a/style.css
+++ b/style.css
@@ -175,7 +175,7 @@ text-align: left;
 
 @media only screen and (max-width: 400px){
   h1{
-    font-size: 3rem;
+    font-size: 120px;
   }
   p{
     font-size: 2em;
