--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ font-size: 22px;
 body{
   font-family: Inter;
   color: #2E3A59;
-  font-size: 1em;
+  font-size: 1.5em;
 }
 
 h1{
@@ -173,15 +173,6 @@ text-align: left;
   
 /* Below here is styling, not important for the actual example, just to make it look nice. No need to look down here! */
 
-@media only screen and (max-width: 400px){
-  h1{
-    font-size: 120px;
-  }
-  p{
-    font-size: 2em;
-  }
-}
-
 @media only screen and (max-width: 1000px){
   h1{
     font-size: 4rem;
@@ -191,6 +182,9 @@ text-align: left;
   }
   body{
     font-size: 4em;
+  }
+  .p2{
+    font-size: 0.5em;
   }
 }
 
