--- a/style.css
+++ b/style.css
@@ -3,14 +3,13 @@ overflow: hidden;
 position: fixed;
 width: 100%;
 z-index: 1;
-margin: 10px;
 }
 
 .navbar a {
 float: left;
 display: block;
 text-align: center;
-padding: 14px 16px;
+padding: 14px 10px;
 color: #2E3A59;
 text-decoration: none;
 }
@@ -30,9 +29,9 @@ body{
 h1{
   font-size: 4em;
   font-style: normal;
-  font-weight: 700;
+  font-weight: 500;
   text-align: left;
-  margin-bottom: 0px;
+  margin: 0;
 }
 
 h2{
@@ -41,6 +40,7 @@ h2{
   font-weight: 300;
   line-height: 72px;
   text-align: left;
+  margin: 0;
 }
 
 h3{
@@ -49,6 +49,7 @@ h3{
   font-weight: 400;
   line-height: 56px;
   text-align: left;
+  margin: 0;
 }
 
 h4{
@@ -66,7 +67,8 @@ h5{
   font-weight: 400;
   line-height: 24px;
   text-align: left;
-
+  margin-top: 0;
+  margin-bottom: 30px;
 }
 
 h6{
@@ -74,6 +76,7 @@ font-size: 1.5em;
 font-style: normal;
 font-weight: 500;
 text-align: left;
+margin: 0;
 }
 
 .subtitle1{
@@ -98,8 +101,7 @@ p{
   font-size: 0.8em;
   font-style: normal;
   font-weight: 400;
-  line-height: 20px;
-  letter-spacing: 0.25px;
+  line-height: 1em;
   text-align: left;
 }
 
@@ -143,7 +145,7 @@ p{
   -webkit-overflow-scrolling: touch; /* Needed to work on iOS Safari */
 }
 
-#carousel.snap > div {
+#carousel.snap > .divider {
   scroll-snap-align: center;
 }
 
@@ -167,17 +169,6 @@ p{
   -ms-scroll-snap-points-y: repeat(100%);
 }
   
-/* Below here is styling, not important for the actual example, just to make it look nice. No need to look down here! */
-
-@media only screen and (max-width: 1000px){
-  h1{
-    font-size: 2em;
-  }
-  .p{
-    font-size: 1em;
-  }
-}
-
 html, body {
   height: 100%;
   margin: 0;
@@ -194,54 +185,96 @@ html, body {
 #carousel > div {
   min-width: 100%;
   min-height: 100%;
+  display: flex;
   justify-content: center;
   align-items: center;
   text-align: center;
   color: #2E3A59;
 }
 
-.icon{
-  width: 30px;
-  height: 30px;
+* {
+  box-sizing: border-box;
 }
 
-.icon:hover{
-  transform: scale(1.25);
-  transition: 0.3s;
+/* Create two equal columns that floats next to each other */
+.column {
+  float: left;
+  width: 50%;
+  padding: 50px;
 }
 
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+@media screen and (max-width: 1000px) {
+
+  h1{
+    font-size: 1.75em;
+  }
+  p{
+    font-size: 0.75em; 
+  }
+  h5{
+    font-size: 1.25em;
+    margin-bottom: 20px;
+  }
+
+  .column {
+    width: 100%;
+    padding: 10px;
+    text-align: center;
+    align-items: center;
+    
+  }
+  .row{
+    width:100%;
+    text-align: center;
+    align-items: center;
+    margin: 50px;
+  }
+  .preview{
+    margin-top: 10px;
+    width: 100%;
+    margin-bottom: 10px;
+  }
+}
+
+@media screen and (min-width: 999px) and (max-width: 1024px) {
+  .row{
+    padding: 10px;
+  }
+  .preview{
+    margin-top: 10px;
+    margin-bottom: 10px;
+    width: 100%;
+  }
+}
 
 .button {
-  background-color: #4CAF50;
+  background-color: #2E3A59;
   border: none;
   color: white;
-  padding: 15px 32px;
+  padding: 15px 20px;
   text-align: center;
   text-decoration: none;
-  display: inline-block;
   font-size: 16px;
-  margin: 4px 2px;
+  margin: 0px 5px 5px 0px;
   cursor: pointer;
+  border-radius: 30px;
 }
 
-@media only screen and (max-width: 1000px) {
-  thead th:not(:first-child) {
-  display: none;
-  }
 
-  td, th {
-  display: block;
-  }
-
-  td[data-th]:before  {
-  content: attr(data-th);
-  }
-  table{
-    width: 80vh;
-  }
+.preview {
+  border-radius: 30px;
+  box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.1);
+  transition: 2s;
 }
-  
-.image-preview{
-  width: 400px;
-  height: 400px;
+
+.preview:hover {
+  transition: 2s;
+  transform: scale(1.1);
 }
