--- a/style.css
+++ b/style.css
@@ -1,301 +1,14 @@
-.navbar {
-overflow: hidden;
-position: fixed;
-width: 100%;
-z-index: 1;
-margin-left: 5%;
-}
-
-.navbar a {
-float: left;
-display: block;
-text-align: center;
-padding: 14px 10px;
-color: #2E3A59;
-text-decoration: none;
-}
-
-.navbar a:hover {
-color: black;
-transform: scale(1.25);
-transition: 0.3s
-}       
-
 body{
-  font-family: Inter;
-  color: #2E3A59;
-  font-size: 1.5em;
+  font-family: p22-underground, sans-serif;
+  font-style: normal;
 }
 
 h1{
-  font-size: 4em;
+  font-weight: 600;
+}
+
+h1{
+  font-family: p22-underground, sans-serif;
+  font-weight: 600;
   font-style: normal;
-  font-weight: 500;
-  text-align: left;
-  margin: 0;
-}
-
-h2{
-  font-size: 3.5em;
-  font-style: normal;
-  font-weight: 300;
-  line-height: 72px;
-  text-align: left;
-  margin: 0;
-}
-
-h3{
-  font-size: 3em;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 56px;
-  text-align: left;
-  margin: 0;
-}
-
-h4{
-  font-size: 2.5em;
-  font-style: normal;
-  font-weight: 300;
-  line-height: 38px;
-  text-align: left;
-  margin: 0;
-}
-
-h5{
-  font-size: 2em;
-  font-style: normal;
-  font-weight: 400;
-  text-align: left;
-  margin-top: 0;
-  margin-bottom: 10px;
-}
-
-h6{
-font-size: 1.5em;
-font-style: normal;
-font-weight: 500;
-text-align: left;
-margin: 0;
-}
-
-.subtitle1{
-font-family: Inter;
-font-size: 1em;
-font-style: normal;
-font-weight: 400;
-line-height: 24px;
-text-align: left;
-}
-
-.subtitle2{
-font-size: 0.8em;
-font-style: normal;
-font-weight: 500;
-line-height: 24px;
-text-align: left;
-}
-
-p{
-  font-family: Inter;
-  font-size: 0.8em;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 1em;
-  text-align: left;
-}
-
-.button-text{
-  font-size: 14px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: 16px;
-  letter-spacing: 1.25px;
-  text-align: left;
-}
-
-.caption{
-  font-size: 12px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 16px;
-  text-align: left;  
-}
-
-.overline{
-  font-size: 10px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: 16px;
-  letter-spacing: 1.5px;
-  text-align: left;
-}
-
-#carousel {
-  /* Ensure that the contents flow horizontally */
-  overflow-x: auto;
-  white-space: nowrap;
-  display: flex;
-  flex-direction: column;
-}
-  
-/* 2018 spec - For Safari 11, Chrome 69+ */
-#carousel.snap {
-  scroll-snap-type: y mandatory;
-  -webkit-overflow-scrolling: touch; /* Needed to work on iOS Safari */
-}
-
-#carousel.snap > .divider {
-  scroll-snap-align: center;
-}
-
-#carousel.snap.vertical {
-  flex-direction: column;
-  scroll-snap-type: y mandatory;
-}
-  
-/* 2015 spec - For Firefox, Edge, IE */
-#carousel.snap {
-  scroll-snap-type: mandatory;
-  -ms-scroll-snap-type: mandatory;
-  scroll-snap-points-x: repeat(100%);
-  -ms-scroll-snap-points-x: repeat(100%);
-}
-
-#carousel.snap.vertical {
-  scroll-snap-points-x: initial;
-  -ms-scroll-snap-points-x: initial;
-  scroll-snap-points-y: repeat(100%);
-  -ms-scroll-snap-points-y: repeat(100%);
-}
-  
-html, body {
-  height: 100%;
-  height: 100%;
-  margin: 0;
-  padding: 0;
-  background-color: #F2F7FF;
-}
-
-#carousel {
-  position: relative;
-  width: 100%;
-  height: 100%;
-}
-  
-#carousel > div {
-  min-width: 100%;
-  min-height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  color: #2E3A59;
-}
-
-* {
-  box-sizing: border-box;
-}
-
-/* Create two equal columns that floats next to each other */
-.column {
-  float: left;
-  width: 50%;
-  padding: 50px;
-}
-
-/* Clear floats after the columns */
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-
-@media screen and (max-width: 767px) {
-
-  h1{
-    font-size: 1.75em;
-  }
-  p{
-    font-size: 0.75em; 
-  }
-  h5{
-    font-size: 1.25em;
-    margin-bottom: 20px;
-  }
-
-  .column {
-    width: 100%;
-    padding: 10px;
-    text-align: center;
-    align-items: center;
-    
-  }
-  .row{
-    width:100%;
-    text-align: center;
-    align-items: center;
-    margin: 50px;
-  }
-  .preview{
-    margin-top: 10px;
-    width: 100%;
-    margin-bottom: 10px;
-  }
-
-  .preview:hover {
-    transform: none;
-  }
-}
-
-@media screen and (width: 768px){
-  .row{
-    padding: 10px;
-  }
-  .preview{
-    width: 100%;
-    margin-top: 30%;
-  }
-
-  .preview:hover {
-    transform: none;
-  }
-}
-
-@media screen and (width: 1024px){
-  .row{
-    padding: 10px;
-  }
-  .preview{
-    width: 100%;
-    margin-top: 10%;
-  }
-
-  .preview:hover {
-    transform: none;
-  }
-}
-
-.button {
-  background-color: #2E3A59;
-  border: none;
-  color: white;
-  padding: 15px 20px;
-  text-align: center;
-  text-decoration: none;
-  font-size: 16px;
-  margin: 0px 5px 5px 0px;
-  cursor: pointer;
-  border-radius: 30px;
-}
-
-.preview {
-  border-radius: 30px;
-  box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.1);
-  transition: 2s;
-}
-
-.preview:hover {
-  transition: 2s;
-  transform: scale(1.1);
 }
