--- a/style.css
+++ b/style.css
@@ -51,7 +51,8 @@ h4{
 }
 
 h5{
-  font-weight: 600;
+  font-weight: 300;
+  text-transform: uppercase;
 }
 
 .navbar-collapse.collapse.in {
@@ -65,6 +66,7 @@ h5{
 
 card-img{
   width: 100%;
+  box-shadow:  4px 4px 60px 10px #8e8a8a30;
 }
 
 @media(min-width: 0px){
@@ -168,9 +170,6 @@ card-img{
   box-shadow:  4px 4px 60px 10px #8e8a8a60;
 }
 
-.card-img{
-  box-shadow:  4px 4px 60px 10px #8e8a8a30;
-}
 
 .card-img:hover{
   box-shadow:  4px 4px 60px 10px #8e8a8a60;
@@ -247,4 +246,25 @@ a {
 	50% { 
 		background-color: #3392fb;
 	}
+}
+
+.fa{
+  padding: 20px;
+  font-size: 30px;
+  transform: scale(1.75);
+  width: 50px;
+  text-align: center;
+  text-decoration: none;
+  margin: 5px 2px;
+  background: none!important;
+}
+
+.m-text {
+  transition: 0.3s;
+  transform: scale(0.95);
+}
+.m-page:hover .m-text, .m-image {
+  opacity: 1;
+  transition: 0.3s;
+  transform: scale(1);
 }
